# flam-edge-detection-viewer

./: .gitignore  API.md  ARCHITECTURE.md  EMULATOR_SETUP.md  README.md  SETUP_GUIDE.md  TESTING_STATUS.md  phases.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
android/app/src/main/java/com/flam/edgeviewer/: MainActivity.kt
android/app/src/main/java/com/flam/edgeviewer/camera/: CameraManager.kt
android/app/src/main/java/com/flam/edgeviewer/gl/: GLRenderer.kt  QuadGeometry.kt  ShaderProgram.kt  TextureHelper.kt
android/app/src/main/java/com/flam/edgeviewer/network/: WebSocketServer.kt
android/app/src/main/java/com/flam/edgeviewer/processing/: FrameProcessor.kt
android/app/src/main/java/com/flam/edgeviewer/utils/: FPSCounter.kt  FrameBuffer.kt  FrameExporter.kt  PerformanceMonitor.kt  PermissionHelper.kt
android/app/src/main/res/drawable/: ic_grayscale.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: confirm_menu.xml  mode_menu.xml
android/app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
web/: package.json  pull-frame.bat  sync-frames.js  tsconfig.json
web/public/: FrameViewer.js  FrameViewer.js.map  WebSocketClient.js  WebSocketClient.js.map  index.html  index.js  index.js.map  styles.css
web/src/: FrameViewer.ts  WebSocketClient.ts  index.ts  types.ts
